--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "ejs-challenge",
   "version": "1.0.0",
-  "description": "",
+  "description": "Blog site for daily blog",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Daryl G",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
